Closed Bug 1202175 Opened 9 years ago Closed 9 years ago

Building Firefox with EGL fails

Categories

(Core :: Graphics: Layers, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla44
Tracking Status
firefox43 --- affected
firefox44 --- fixed

People

(Reporter: johnp, Unassigned)

References

(Blocks 1 open bug)

Details

(Keywords: regression, Whiteboard: [gfx-noted])

Attachments

(1 file)

Building Firefox --with-gl-provider=EGL fails with the error:

    ShadowLayerUtilsX11.cpp: In constructor ‘mozilla::layers::SurfaceDescriptorX11::SurfaceDescriptorX11(gfxXlibSurface*, bool)’:
    ShadowLayerUtilsX11.cpp:79:25: error: ‘class gfxXlibSurface’ has no member named ‘GetGLXPixmap’
        mGLXPixmap = aSurf->GetGLXPixmap();

The code has been added in bug 1187440 on July 31st.
Keywords: regression
Here's a quick fix that guards the call appropriately; thanks.
Attachment #8660206 - Flags: review?(jgilbert)
Attachment #8660206 - Flags: review?(jgilbert) → review+
Keywords: checkin-needed
Whiteboard: [gfx-noted]
https://hg.mozilla.org/mozilla-central/rev/71e6964ff7c4
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla44
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: