Bug 1202175 - Guard GLX-specific call in SurfaceDescriptorX11. r=jgilbert